fix(layout): make mat-drawer-container fill remaining height after toolbar
Changed mat-drawer-container from height: 100% (overflows past toolbar)
to flex: 1 + overflow: hidden. Added mat-drawer-content flex column
styling so routed content fills the available space.

--- a/eform-client/src/app/components/layouts/full-layout/full-layout.component.scss
+++ b/eform-client/src/app/components/layouts/full-layout/full-layout.component.scss
@@ -17,6 +17,11 @@
   justify-content: space-between;
 }
 
+:host ::ng-deep .mat-drawer-content {
+  display: flex;
+  flex-direction: column;
+}
+
 .tag {
   width: $icon-size + $icon-size + $icon-size;
   justify-content: space-between;
